--- a/BasicControlLibrary/BasicControlLibrary.csproj
+++ b/BasicControlLibrary/BasicControlLibrary.csproj
@@ -5,4 +5,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\XMLHandle\XMLHandle.csproj" />
+  </ItemGroup>
+
 </Project>
