--- a/BasicControlLibrary/BasicControlLibrary.csproj
+++ b/BasicControlLibrary/BasicControlLibrary.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls.WebView" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\XMLHandle\XMLHandle.csproj" />
   </ItemGroup>
 
