--- a/XMLToDocument/XMLToDocument.csproj
+++ b/XMLToDocument/XMLToDocument.csproj
@@ -11,7 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="data\style\test-style.css">
+    <None Update="data\style\main.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="data\style\navigation.xsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="data\style\member.xsl">
